# mike

./: .flake8  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
mike/: app_version.py  arguments.py  commands.py  driver.py  git_utils.py  jsonpath.py  mkdocs_utils.py  server.py  utils.py  versions.py
test/: __init__.py
test/data/mkdocs_yaml/: zensical.toml
test/data/no_directory_urls/: zensical.toml
test/data/remote/: zensical.toml
test/integration/: __init__.py  test_alias.py  test_command_line.py  test_delete.py  test_deploy.py  test_list.py  test_props.py  test_retitle.py  test_serve.py  test_set_default.py
test/unit/: test_arguments.py  test_commands.py  test_driver.py  test_git_utils.py  test_jsonpath.py  test_mkdocs_utils.py  test_server.py  test_versions.py
